--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //barcode scanner api
     implementation 'com.google.android.gms:play-services-code-scanner:16.1.0'
+    //readmore/readless api
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
 }
